fix(ItemCard): fix the bug cause overflow in the card title

--- a/src/components/ui/itemCard/ItemCard.module.css
+++ b/src/components/ui/itemCard/ItemCard.module.css
@@ -6,6 +6,7 @@
   padding: 0 0.5rem;
   gap: 0.75rem;
   text-decoration: none;
+  margin: 0 auto;
 }
 
 .imgContaner {
@@ -26,6 +27,9 @@
 
 .textContainer p {
   margin: 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .quantity {
